started second project

--- a/index.html
+++ b/index.html
@@ -3,9 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing 2</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="favicon" href="./img/icon.svg">
 </head>
 <body>
-    
+    <header class="header-container">
+        <section class="nav-elements">
+            <div class="nav1-container">
+                <img src="./img/weblink_logo2.png" class="logo">
+                <div class="nav1-items-container">
+                    <a href="#" class="nav1-items nosotros-item">Nosotros</a>
+                    <a href="#" class="nav1-items">Socios</a>
+                    <a href="#" class="nav1-items">Contacto</a>
+                    <a href="#" class="nav1-items">Documentación</a>
+                    <a href="#" class="ingresar-btn">Ingresar</a>
+                </div>
+                
+            </div>
+            <div class="nav2-oculto-container">
+                <a href="#" class="nav2-items">Nuestras sedes</a>
+                <a href="#" class="nav2-items">Productos</a>
+                <a href="#" class="nav2-items">Historia</a>
+                <a href="#" class="nav2-items">Asociate</a>
+            </div>
+        </section>
+        <section class="header-body">
+            <div class="bienvenida-container">
+                <img src="./img/img1.jpg" class="bienvenida-img">
+                <div class="bienvenida-textos">
+                    <h1 class="title">Bienvenido a nuestra página web!</h1>
+                    <h3 class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, asperiores.</h3>
+                </div>
+            </div>
+            <div class="texto-bienvenida">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt magnam doloribus doloremque cumque iste ipsam maiores et ducimus expedita nisi!
+            </div>
+        </section>
+
+        <div class="whatsapp-container">
+            <img src="./img/bxl-whatsapp.svg" class="whatsapp-item">
+        </div>
+    </header>
+
+    <main class="main-container">
+        <section class="main-header">
+            <div class="text-container">
+                <h2 class="second-title">Lorem ipsum dolor sit amet.</h2>
+                <p class="second-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis saepe odit recusandae corporis, dolore iste alias distinctio aut dolorum qui!</p>
+            </div>
+            <div class="imagen-importante-container">
+                <img src="./img/img2.jpg" class="imagen-importante">
+            </div>
+        </section>
+
+        <section class="main-body">
+            <div class="slider-container">
+                <img src="./img/bx-chevron-left.svg" class="slider-arrows">
+                <img src="./img/img3.jpg" class="slider-imgs">
+                <img src="./img/img4.jpg" class="slider-imgs">
+                <img src="./img/img5.jpg" class="slider-imgs">
+                <img src="./img/bx-chevron-right.svg" class="slider-arrows">
+            </div>
+        </section>
+
+        <section class="main-footer">
+            <div class="hover-imagenes-container">
+                <img src="./img/img6.jpg" class="hover-imgs">
+                <img src="./img/img7.jpg" class="hover-imgs">
+                <img src="./img/img8.jpg" class="hover-imgs">
+            </div>
+        </section>
+    </main>
+
+    <footer class="foo-container">
+        <section class="foo-contact">
+            <div class="footer-title-container">
+                <h2 class="footer-title">Contactese con nosotros</h2>
+            </div>
+
+            <div class="inputs-container">
+                <input type="text" placeholder="email@company.com">
+                <input type="text" placeholder="Your message">
+               <button type="submit" class="sub-button">Enviar</button>
+            </div>
+        </section>
+
+        <section class="foo-footer">
+            <div class="social-media-container">
+                <img src="./img/bxl-facebook-square (1).svg" class="social-media-icons" >
+                <img src="./img/bxl-instagram.svg" class="social-media-icons" >
+                <img src="./img/bxl-twitter.svg" class="social-media-icons" >
+            </div>
+        </section>
+
+        <section class="footerNav-elements-container nav1-container">
+            <div class="footer-nav-items">
+                <a href="#" class="foo-nav-items">Nosotros</a>
+                <a href="#" class="foo-nav-items">Socios</a>
+                <a href="#" class="foo-nav-items">Contacto</a>
+                <a href="#" class="foo-nav-items">Documentación</a>
+                <img src="./img/bxs-caret-up-circle.svg" class="return-up-button">
+            </div>
+        </section>
+
+    </footer>
+
+    <script src="./js/navigation.js"></script>
 </body>
 </html>
