finished frontend page

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         </section>
         <section class="header-body">
             <div class="bienvenida-container">
-                <img src="./img/img1.jpg" class="bienvenida-img">
+                <div class="bienvenida-img-container">
+                    <img src="./img/img1.jpg" class="bienvenida-img">
+                </div>
                 <div class="bienvenida-textos">
                     <h1 class="title">Bienvenido a nuestra página web!</h1>
-                    <h3 class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, asperiores.</h3>
+                    <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nemo explicabo saepe minus non facilis consequuntur, sunt molestiae fuga, ad asperiores sapiente debitis aperiam vel incidunt. Cumque nam cupiditate eveniet!</h3>
                 </div>
-            </div>
-            <div class="texto-bienvenida">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt magnam doloribus doloremque cumque iste ipsam maiores et ducimus expedita nisi!
             </div>
         </section>
 
         <div class="whatsapp-container">
             <img src="./img/bxl-whatsapp.svg" class="whatsapp-item">
         </div>
+        <hr>
     </header>
 
     <main class="main-container">
@@ -60,12 +60,13 @@
 
         <section class="main-body">
             <div class="slider-container">
-                <img src="./img/bx-chevron-left.svg" class="slider-arrows">
+                <img src="./img/bx-chevron-left.svg" class="slider-arrows slider-arrow-left">
                 <img src="./img/img3.jpg" class="slider-imgs">
                 <img src="./img/img4.jpg" class="slider-imgs">
                 <img src="./img/img5.jpg" class="slider-imgs">
-                <img src="./img/bx-chevron-right.svg" class="slider-arrows">
+                <img src="./img/bx-chevron-right.svg" class="slider-arrows slider-arrow-right">
             </div>
+            <hr>
         </section>
 
         <section class="main-footer">
@@ -84,27 +85,31 @@
             </div>
 
             <div class="inputs-container">
-                <input type="text" placeholder="email@company.com">
-                <input type="text" placeholder="Your message">
+                <input type="text" placeholder="email@company.com" class="email-input">
+                <input type="text" placeholder="Your message" class="message-input">
                <button type="submit" class="sub-button">Enviar</button>
             </div>
+
         </section>
 
         <section class="foo-footer">
             <div class="social-media-container">
-                <img src="./img/bxl-facebook-square (1).svg" class="social-media-icons" >
-                <img src="./img/bxl-instagram.svg" class="social-media-icons" >
-                <img src="./img/bxl-twitter.svg" class="social-media-icons" >
+    
+                <img src="./img/bxl-facebook-square (1).svg" class="social-media-icons facebook-icon" >
+                <img src="./img/bxl-instagram.svg" class="social-media-icons instagram-icon" >
+                <img src="./img/bxl-twitter.svg" class="social-media-icons twitter-icon" >
             </div>
         </section>
 
         <section class="footerNav-elements-container nav1-container">
             <div class="footer-nav-items">
-                <a href="#" class="foo-nav-items">Nosotros</a>
-                <a href="#" class="foo-nav-items">Socios</a>
-                <a href="#" class="foo-nav-items">Contacto</a>
-                <a href="#" class="foo-nav-items">Documentación</a>
-                <img src="./img/bxs-caret-up-circle.svg" class="return-up-button">
+                <div class="footer-for-gap">
+                    <a href="#" class="foo-nav-items">Nosotros</a>
+                    <a href="#" class="foo-nav-items">Socios</a>
+                    <a href="#" class="foo-nav-items">Contacto</a>
+                    <a href="#" class="foo-nav-items">Documentación</a>
+                </div>
+                <a href="#"><img src="./img/bxs-caret-up-circle.svg" class="return-up-button"></a>
             </div>
         </section>
 
