--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing 2</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="favicon" href="./img/icon.svg">
+    <link rel="icon" href="./img/icon.svg">
 </head>
 <body>
     <header class="header-container">
