fixed nav and slider

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <section class="main-body">
             <div class="slider-container">
                 <img src="./img/bx-chevron-left.svg" class="slider-arrows slider-arrow-left">
-                <img src="./img/img3.jpg" class="slider-imgs">
-                <img src="./img/img4.jpg" class="slider-imgs">
-                <img src="./img/img5.jpg" class="slider-imgs">
+                <img src="./img/img3.jpg" class="slider-imgs slider-imgs--show" id="1">
+                <img src="./img/img4.jpg" class="slider-imgs" id="2">
+                <img src="./img/img5.jpg" class="slider-imgs" id="3">
                 <img src="./img/bx-chevron-right.svg" class="slider-arrows slider-arrow-right">
             </div>
             <hr>
@@ -71,9 +71,9 @@
 
         <section class="main-footer">
             <div class="hover-imagenes-container">
-                <img src="./img/img6.jpg" class="hover-imgs">
-                <img src="./img/img7.jpg" class="hover-imgs">
-                <img src="./img/img8.jpg" class="hover-imgs">
+                <img src="./img/img6.jpg" class="hover-imgs hover-img1">
+                <img src="./img/img7.jpg" class="hover-imgs hover-img2">
+                <img src="./img/img8.jpg" class="hover-imgs hover-img3">
             </div>
         </section>
     </main>
@@ -116,5 +116,6 @@
     </footer>
 
     <script src="./js/navigation.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 </html>
