finished hover imgs

--- a/index.html
+++ b/index.html
@@ -70,10 +70,32 @@
         </section>
 
         <section class="main-footer">
-            <div class="hover-imagenes-container">
-                <img src="./img/img6.jpg" class="hover-imgs hover-img1">
-                <img src="./img/img7.jpg" class="hover-imgs hover-img2">
-                <img src="./img/img8.jpg" class="hover-imgs hover-img3">
+            <div class="hover-container">
+                <h2 class="hover-title">Galeria</h2>
+                <div class="galeria-imgs">
+                    <div class="imagen-galeria">
+                        <img src="./img/img6.jpg" class="hover-imgs hover-img1">
+                        <div class="hover-galeria">
+                            <img src="./img/mouse.svg">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-galeria">
+                        <img src="./img/img7.jpg" class="hover-imgs hover-img1">
+                        <div class="hover-galeria">
+                            <img src="./img/mouse.svg">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-galeria">
+                        <img src="./img/img8.jpg" class="hover-imgs hover-img1">
+                        <div class="hover-galeria">
+                            <img src="./img/mouse.svg">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    
+                </div>
             </div>
         </section>
     </main>
