fixed responsive for tablets

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 </div>
                 <div class="bienvenida-textos">
                     <h1 class="title">Bienvenido a nuestra página web!</h1>
-                    <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nemo explicabo saepe minus non facilis consequuntur, sunt molestiae fuga, ad asperiores sapiente debitis aperiam vel incidunt. Cumque nam cupiditate eveniet!</h3>
+                    <div class="subtitle-container">
+                        <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nemo explicabo saepe minus non facilis consequuntur, sunt molestiae fuga, ad asperiores sapiente debitis aperiam vel incidunt.          Cumque nam cupiditate eveniet!</h3>
+                    </div>
                 </div>
             </div>
         </section>
